--- a/SimpleFramework/SimpleFramework.vcxproj
+++ b/SimpleFramework/SimpleFramework.vcxproj
@@ -153,6 +153,8 @@
     <ClCompile Include="..\imgui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="..\imgui\imgui_tables.cpp" />
     <ClCompile Include="..\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="CollisionDatum.cpp" />
+    <ClCompile Include="CollisionFunctions.cpp" />
     <ClCompile Include="DotClicker.cpp" />
     <ClCompile Include="EntryPoint.cpp" />
     <ClCompile Include="Example.cpp" />
@@ -160,7 +162,6 @@
     <ClCompile Include="GLFWCallbacks.cpp" />
     <ClCompile Include="LineRenderer.cpp" />
     <ClCompile Include="Lochiengine.cpp" />
-    <ClCompile Include="Rigidbody.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
     <ClCompile Include="ApplicationHarness.cpp" />
@@ -178,6 +179,8 @@
     <ClInclude Include="..\imgui\imstb_textedit.h" />
     <ClInclude Include="..\imgui\imstb_truetype.h" />
     <ClInclude Include="Application.h" />
+    <ClInclude Include="CollisionDatum.h" />
+    <ClInclude Include="CollisionFunctions.h" />
     <ClInclude Include="DotClicker.h" />
     <ClInclude Include="Example.h" />
     <ClInclude Include="glad.h" />
@@ -187,7 +190,6 @@
     <ClInclude Include="LineRenderer.h" />
     <ClInclude Include="Lochiengine.h" />
     <ClInclude Include="Maths.h" />
-    <ClInclude Include="Rigidbody.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="ShaderProgram.h" />
     <ClInclude Include="ApplicationHarness.h" />
