Made things work nearly

--- a/SimpleFramework/SimpleFramework.vcxproj
+++ b/SimpleFramework/SimpleFramework.vcxproj
@@ -163,8 +163,10 @@
     <ClCompile Include="LineRenderer.cpp" />
     <ClCompile Include="Lochiengine.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="PhysicsObject.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
     <ClCompile Include="ApplicationHarness.cpp" />
+    <ClCompile Include="Shape.cpp" />
     <ClCompile Include="Utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -191,8 +193,10 @@
     <ClInclude Include="Lochiengine.h" />
     <ClInclude Include="Maths.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="PhysicsObject.h" />
     <ClInclude Include="ShaderProgram.h" />
     <ClInclude Include="ApplicationHarness.h" />
+    <ClInclude Include="Shape.h" />
     <ClInclude Include="Utilities.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
