--- a/Working/imgui.ini
+++ b/Working/imgui.ini
@@ -13,3 +13,18 @@ Pos=107,55
 Size=550,680
 Collapsed=1
 
+[Window][My First Tool]
+Pos=92,106
+Size=603,254
+Collapsed=0
+
+[Window][Shape Menu]
+Pos=263,60
+Size=284,127
+Collapsed=0
+
+[Window][Shape Creator Menu]
+Pos=16,525
+Size=312,127
+Collapsed=0
+
