--- a/Working/imgui.ini
+++ b/Working/imgui.ini
@@ -24,7 +24,17 @@ Size=284,127
 Collapsed=0
 
 [Window][Shape Creator Menu]
-Pos=16,525
-Size=312,127
+Pos=243,92
+Size=115,127
+Collapsed=0
+
+[Window][Another Window!]
+Pos=235,55
+Size=263,77
+Collapsed=0
+
+[Window][Creator Menu]
+Pos=67,87
+Size=115,127
 Collapsed=0
 
