--- a/Working/imgui.ini
+++ b/Working/imgui.ini
@@ -29,12 +29,22 @@ Size=115,127
 Collapsed=0
 
 [Window][Another Window!]
-Pos=235,55
+Pos=368,76
 Size=263,77
 Collapsed=0
 
 [Window][Creator Menu]
-Pos=67,87
-Size=115,127
+Pos=898,87
+Size=378,288
+Collapsed=0
+
+[Window][Settings]
+Pos=207,413
+Size=263,77
+Collapsed=0
+
+[Window][Entity Menu]
+Pos=902,302
+Size=378,334
 Collapsed=0
 
