--- a/SimpleFramework/SimpleFramework.vcxproj
+++ b/SimpleFramework/SimpleFramework.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="Example.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="GLFWCallbacks.cpp" />
+    <ClCompile Include="GUI.cpp" />
     <ClCompile Include="LineRenderer.cpp" />
     <ClCompile Include="Lochiengine.cpp" />
     <ClCompile Include="Entity.cpp" />
@@ -188,6 +189,7 @@
     <ClInclude Include="glad.h" />
     <ClInclude Include="GLFWCallbacks.h" />
     <ClInclude Include="Graphics.h" />
+    <ClInclude Include="GUI.h" />
     <ClInclude Include="khrplatform.h" />
     <ClInclude Include="LineRenderer.h" />
     <ClInclude Include="Lochiengine.h" />
