Fixed verlet + gui stuff
Physics gui much better, presets gui. forces gui

--- a/Working/imgui.ini
+++ b/Working/imgui.ini
@@ -44,7 +44,17 @@ Size=263,77
 Collapsed=0
 
 [Window][Entity Menu]
-Pos=902,302
-Size=378,334
+Pos=841,55
+Size=378,357
+Collapsed=0
+
+[Window][Forces]
+Pos=57,58
+Size=277,123
+Collapsed=0
+
+[Window][Preset Menu]
+Pos=50,220
+Size=171,100
 Collapsed=0
 
