Ready for submission

--- a/Working/imgui.ini
+++ b/Working/imgui.ini
@@ -44,17 +44,27 @@ Size=263,77
 Collapsed=0
 
 [Window][Entity Menu]
-Pos=841,55
-Size=378,357
+Pos=939,160
+Size=263,77
 Collapsed=0
 
 [Window][Forces]
-Pos=57,58
-Size=277,123
+Pos=92,395
+Size=298,146
 Collapsed=0
 
 [Window][Preset Menu]
-Pos=50,220
-Size=171,100
+Pos=88,303
+Size=171,123
+Collapsed=0
+
+[Window][Information]
+Pos=800,19
+Size=465,65
+Collapsed=0
+
+[Window][Interactions and Forces]
+Pos=60,60
+Size=347,192
 Collapsed=0
 
