--- a/SimpleFramework/SimpleFramework.vcxproj.filters
+++ b/SimpleFramework/SimpleFramework.vcxproj.filters
@@ -65,7 +65,9 @@
     <ClCompile Include="Shape.cpp">
       <Filter>Lochiengine</Filter>
     </ClCompile>
-    <ClCompile Include="GUI.cpp" />
+    <ClCompile Include="GUI.cpp">
+      <Filter>Lochiengine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GLFWCallbacks.h">
@@ -152,7 +154,9 @@
     <ClInclude Include="Shape.h">
       <Filter>Lochiengine</Filter>
     </ClInclude>
-    <ClInclude Include="GUI.h" />
+    <ClInclude Include="GUI.h">
+      <Filter>Lochiengine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Engine">
