Abstracted The physics engine
Now is separate from the Application and Line Renderer, with classes the interact with both in-between.
Depenetration now is affected by mass

--- a/SimpleFramework/SimpleFramework.vcxproj.filters
+++ b/SimpleFramework/SimpleFramework.vcxproj.filters
@@ -68,6 +68,8 @@
     <ClCompile Include="GUI.cpp">
       <Filter>Lochiengine</Filter>
     </ClCompile>
+    <ClCompile Include="LochiengineApplication.cpp" />
+    <ClCompile Include="DrawHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GLFWCallbacks.h">
@@ -157,6 +159,8 @@
     <ClInclude Include="GUI.h">
       <Filter>Lochiengine</Filter>
     </ClInclude>
+    <ClInclude Include="LochiengineApplication.h" />
+    <ClInclude Include="DrawHandler.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Engine">
