--- a/SimpleFramework/SimpleFramework.vcxproj
+++ b/SimpleFramework/SimpleFramework.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="CollisionDatum.cpp" />
     <ClCompile Include="CollisionFunctions.cpp" />
     <ClCompile Include="DotClicker.cpp" />
+    <ClCompile Include="DrawHandler.cpp" />
     <ClCompile Include="EntryPoint.cpp" />
     <ClCompile Include="Example.cpp" />
     <ClCompile Include="glad.c" />
@@ -164,6 +165,7 @@
     <ClCompile Include="LineRenderer.cpp" />
     <ClCompile Include="Lochiengine.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="LochiengineApplication.cpp" />
     <ClCompile Include="PhysicsObject.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
     <ClCompile Include="ApplicationHarness.cpp" />
@@ -185,6 +187,7 @@
     <ClInclude Include="CollisionDatum.h" />
     <ClInclude Include="CollisionFunctions.h" />
     <ClInclude Include="DotClicker.h" />
+    <ClInclude Include="DrawHandler.h" />
     <ClInclude Include="Example.h" />
     <ClInclude Include="glad.h" />
     <ClInclude Include="GLFWCallbacks.h" />
@@ -193,6 +196,7 @@
     <ClInclude Include="khrplatform.h" />
     <ClInclude Include="LineRenderer.h" />
     <ClInclude Include="Lochiengine.h" />
+    <ClInclude Include="LochiengineApplication.h" />
     <ClInclude Include="Maths.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="PhysicsObject.h" />
